# SkyrimDLL

.github/workflows/: build.yml
BakaWorldMapFOV/: xmake.lua
BakaWorldMapFOV/src/: main.cpp  pch.h
BlendedShorelines/: xmake.lua
BlendedShorelines/src/: main.cpp  pch.h
CameraFollows/: xmake.lua
CameraFollows/src/: main.cpp  pch.h
ColinoshSKSE/: resume-repo.bat  xmake.lua
ColinoshSKSE/src/: main.cpp  pch.h
CraftingCategories/: resume-repo.bat  xmake.lua
CraftingCategories/src/: main.cpp  pch.h
DienesToolsNG/: xmake.lua
DienesToolsNG/src/: main.cpp  pch.h
FixDualWieldParrying/: xmake.lua
FixDualWieldParrying/src/: main.cpp  pch.h
GetIniConsoleFix/: xmake.lua
GetIniConsoleFix/src/: main.cpp  pch.h
GrimyToolsNG/: xmake.lua
GrimyToolsNG/src/: main.cpp
LightAttachment/: xmake.lua
LightAttachment/src/: main.cpp  pch.h
MagExtenderNG/: xmake.lua
MagExtenderNG/res/: package.lua
MagExtenderNG/src/: main.cpp  pch.h
NeutralBelonging/: xmake.lua
NeutralBelonging/src/: main.cpp
NoLoadingScreens/: binary-release.url  xmake.lua
NoLoadingScreens/src/: main.cpp  pch.h
PapyrusIniManipulator/: resume-repo.bat  xmake.lua
PapyrusIniManipulator/src/: main.cpp  pch.h
PapyrusUtilTFC/: xmake.lua
PlayerPayCrimeGoldTweak/: xmake.lua
RaceMenuPlayerRotation/: xmake.lua
SaveGameEncoding/: xmake.lua
ShowSleepWaitMenu/: BuildRelease.bat  CMakeLists.txt  CMakePresets.json  ResumeRepo.bat  vcpkg.json
ShowSleepWaitMenu/cmake/: Plugin.h.in  SkyrimPlugin.cmake  Version.rc.in
ShowSleepWaitMenu/src/: main.cpp  pch.h
SkyRegEx/: xmake.lua
(+40 files in other folders)
